--- a/run.html
+++ b/run.html
@@ -8,6 +8,6 @@
 
 </head>
 <body>
-   <script src="closureExamples.js"></script> 
+   <script src="firstClassFunctions.js"></script> 
 </body>
 </html>
