learned about callback functions

--- a/run.html
+++ b/run.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
-   <script src="firstClassFunctions.js"></script> 
+    <button id="clickMe">Click Me</button>
+   <script src="callbackFunctions.js"></script> 
 </body>
 </html>
