learned about callbacks, higher order functions, promises

--- a/run.html
+++ b/run.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <button id="clickMe">Click Me</button>
-   <script src="callbackFunctions.js"></script> 
+   <script src="promises.js"></script> 
 </body>
 </html>
